2012-10-24 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: Add is_attr_single_value() to check if
	  a specified attribute is defined as single-value in the LDAP schema

2012-10-19 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: read_user_human_readable: Protect attribute
	  values from Encode::decode_utf8() with Encode::FB_CROAK

2012-08-07 <fumiyas at OSS Technology Corp., Japan>
	* smbldap_tools.pm: $config{masterLDAP} and $config{slaveLDAP}
	  can take an LDAP URI
	* smbldap_tools.pm: Non-root user cannot run smbldap-passwd,
	  smbldap-userinfo, smbldap-userlist and smbldap-grouplist with
	  SSL-enabled LDAP server
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=647860
	* new tag 0.9.9

2012-07-17 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-useradd: Fix smbldap-passwd name
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=679935

2012-07-16 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-userlist, smbldap-grouplist: Specify Net::LDAP
	  search attributes as an array ref, not a string
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=681350

2012-03-05 <fumiyas at OSS Technology Corp., Japan>
	* Use Digest::SHA instead of Digest::SHA1 if Perl version > 5.10.0
	* smbldap-usermod: -M, -O, -T option: Remove associated attribute
	  when the null value is specified

2011-09-26 <fumiyas at OSS Technology Corp., Japan>
	* new tag 0.9.7

2011-09-06 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-populate: Create parent entry for $config{sambaUnixIdPooldn}
	  if it does not exist

2011-09-02 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-config: Rename from configure.pl

2011-07-23 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-populate: Create parent entry for $config{usersdn}
	  (and others) if it does not exist
	  (e.g. usersdn="ou=Users,ou=parent,${suffix}" in smbldap.conf)

2011-07-13 <fumiyas at OSS Technology Corp., Japan>
	* smbldap-useradd: New option: --non-unique (Allow the creation of a